SURFACE CREATED: SurfaceFlinger allocates WestlakeMCD surface buffer!
MAJOR MILESTONE — real surface buffer allocation through Westlake:
  SurfaceSession.nativeCreate() → SurfaceFlinger connection ✅
  SurfaceControl.nativeCreate("WestlakeMCD", 500x300, RGBA_8888) → ptr=520628710608 ✅
  Surface(surfaceControl) → Java Surface wrapper ✅

The SurfaceFlinger has allocated a REAL pixel buffer named
"WestlakeMCD" at native pointer 520628710608. This is visible
in the phone's SurfaceFlinger layer list.

Canvas.lockCanvas fails with "Surface has already been released"
— the cleanup/GC system is releasing the surface before we can
draw to it. Next: prevent premature release.

Added JLLIIIIJL shorty for SurfaceControl.nativeCreate (9 params!)
Display: 1080x2280 @450dpi with Mode(id=1, 60fps)
BinderProxy.linkToDeath/unlinkToDeath → no-op

Co-Authored-By: Claude Opus 4.6 (1M context) <noreply@anthropic.com>